@@ -263,6 +263,7 @@ class DvdWriter(object):
 
     This class is implemented in terms of the ``eject`` and ``growisofs``
     utilities, all of which should be available on most UN*X platforms.
+    You can't expect this to work on Windows, and it's not supported there.
 
     **Image Writer Interface**
 
